--- a/src/components/translations/fr/global.json
+++ b/src/components/translations/fr/global.json
@@ -102,7 +102,8 @@
     "listo": "Prêt à commencer ?",
     "boton": "Planifiez une réunion",
     "politicas": "Politique de confidentialité"
+},
+"mensaje-whp": { 
+    "mensaje": "Bonjour, je suis intéressé à planifier une réunion pour en savoir plus sur vos services."
 }
-
-
 }
