se agregaron efectos en la seccion de equipos

--- a/src/components/translations/es/global.json
+++ b/src/components/translations/es/global.json
@@ -109,27 +109,28 @@
             "comunicacion_m": "Licenciada en Comunicación Social",
             "magister_periodismo": "Magister en Periodismo",
             "adm_empresas": "Licenciada en Administración de Empresas",
-            "diseño": "Diseñador gráfico",
-            "diseñadora": "Diseñadora gráfica",
+            "diseño": "Diseñador Gráfico",
+            "diseñadora": "Diseñadora Gráfica",
             "content_creator": "Content Creator",
-            "abogada": "Abogada y escribana",
+            "abogada": "Abogada y Escribana",
             "contadora": "Contadora",
-            "sistemas": "Analista en sistemas",
-            "filmmaker": "Grabación y edición"
+            "sistemas": "Analista en Sistemas",
+            "filmmaker": "Grabación y Edición",
+            "relaciones": "Licenciada en Relaciones Internacionales"
         },
         "puesto": {
             "director": "Director General",
             "gentio_BIT": "Directora Gentío BIT",
             "operaciones": "Directora de Operaciones",
             "social_media": "Social Media Manager",
-            "diseño": "Diseñador gráfico",
-            "diseñadora": "Diseñadora gráfica",
-            "analista_marca": "Analista de marcas",
+            "diseño": "Diseñador Gráfico",
+            "diseñadora": "Diseñadora Gráfica",
+            "analista_marca": "Analista de Marcas",
             "fotografa": "Fotógrafa",
-            "contenido": "Contenido creativo",
-            "legal": "Asuntos legales",
+            "contenido": "Contenido Creativo",
+            "legal": "Asuntos Legales",
             "sdr": "Sales Development Representative",
-            "desarrollo": "Desarrollador web",
+            "desarrollo": "Desarrollador Web",
             "filmmaker": "Filmmaker"
         }
     },
