--- a/src/components/translations/fr/global.json
+++ b/src/components/translations/fr/global.json
@@ -138,7 +138,8 @@
             "abogada": "Avocate et Notaire",
             "contadora": "Comptable",
             "sistemas": "Analyste en Systèmes",
-            "filmmaker": "Enregistrement et Montage"
+            "filmmaker": "Enregistrement et Montage",
+            "relaciones": "Licence en Relations Internationales"
         },
         "puesto": {
             "director": "Directeur Général",
