--- a/src/components/translations/en/global.json
+++ b/src/components/translations/en/global.json
@@ -138,7 +138,8 @@
             "abogada": "Lawyer and Notary",
             "contadora": "Accountant",
             "sistemas": "Systems Analyst",
-            "filmmaker": "Recording and Editing"
+            "filmmaker": "Recording and Editing",
+            "relaciones": "Bachelor in International Relations"
         },
         "puesto": {
             "director": "General Director",
