--- a/src/components/translations/fr/global.json
+++ b/src/components/translations/fr/global.json
@@ -165,5 +165,9 @@
     "trabajo": {
         "title": "Découvrez nos principaux travaux",
         "button": "Voir les travaux"
+    },
+    "gentioteam": {
+        "title": "Rejoignez notre équipe",
+        "button": "Téléchargez votre profil"
     }
 }
