--- a/src/components/translations/es/global.json
+++ b/src/components/translations/es/global.json
@@ -154,5 +154,9 @@
     "trabajo": {
         "title": "Mirá nuestros principales trabajos",
         "button": "Ver trabajos"
+    },
+    "gentioteam": {
+        "title": "Súmate a nuestro equipo",
+        "button": "Cargá tu perfil"
     }
 }
